Make right arrow show up correctly on Firefox/IE [MJ-648]

--- a/static/my.jobs.css
+++ b/static/my.jobs.css
@@ -935,6 +935,7 @@ em.pendingText {
 }
 
 .topbar #last-microsite .arrow {
+    position: absolute;
     float: left;
     margin-left: 2px;
     border-right: 0px;
